--- a/styles/components/appHeader.scss
+++ b/styles/components/appHeader.scss
@@ -19,7 +19,7 @@
 .sidebar-footer {
   @apply pb-4 text-center;
   .powered-by {
-    @apply flex items-center gap-3 justify-center font-semibold;
+    @apply flex items-center gap-3 justify-center font-medium;
   }
 }
 .top-row{
