--- a/styles/components/categories.scss
+++ b/styles/components/categories.scss
@@ -1,5 +1,5 @@
 .categories-list-slider {
-  @apply flex items-center gap-3 w-full max-w-full overflow-y-auto my-3;
+  @apply flex items-center gap-3 w-full max-w-full overflow-y-auto my-3 py-2 px-1;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
   &::-webkit-scrollbar {
@@ -14,36 +14,46 @@
 }
 .menu-item {
   @apply w-full h-[160px] flex items-center justify-center flex-col gap-2 p-4 bg-white rounded-[23px];
-  box-shadow: 0px 0px 8px rgb(211 209 216 / 30%);
+  box-shadow: 0px 0px 8px rgba(211, 209, 216, 0.85);
   @include r-medium {
     @apply w-full;
   }
   h4 {
-    @apply capitalize font-semibold;
+    @apply capitalize font-medium text-sm;
   }
   .price {
-    @apply font-bold;
+    @apply flex text-[12px] items-center gap-1 font-bold;
+    span {
+      @apply font-bold text-xs;
+    }
   }
 }
 .category-menu-items {
-  @apply grid grid-cols-2 gap-[25px] justify-evenly justify-items-center items-center content-evenly max-w-full mb-[25px] mx-auto pb-[40px];
+  @apply grid grid-cols-2 gap-[14px] justify-evenly justify-items-center items-center content-evenly max-w-full mb-[25px] mx-auto pb-[40px];
   div {
-    &.react-reveal {
-      &:nth-child(2n-1) {
-        @apply relative top-[35px];
-      }
+    @apply w-full;
+
+    &.reveal-div {
+      @apply w-full;
+
+      // &:nth-child(2n-1) {
+      //   @apply relative top-[35px];
+      // }
     }
   }
   @include r-medium {
     @apply grid-cols-4;
     div {
-      &.react-reveal {
-        &:nth-child(2n-1) {
-          @apply relative top-0;
-        }
-        &:nth-child(even) {
-          @apply relative top-[35px];
-        }
+      @apply w-full;
+
+      &.reveal-div {
+        @apply w-full;
+        // &:nth-child(2n-1) {
+        //   @apply relative top-0;
+        // }
+        // &:nth-child(even) {
+        //   @apply relative top-[35px];
+        // }
       }
     }
   }
@@ -62,7 +72,7 @@
 
 .category-button {
   @apply w-[65px] min-w-[65px] h-[100px] bg-white rounded-full min-h-[100px]  px-1 pb-1 transition-all ease-in-out duration-300 cursor-pointer relative;
-  box-shadow: 0px 0px 8px rgba(211, 209, 216, 0.3);
+  box-shadow: 0px 0px 8px rgba(211, 209, 216, 0.85);
   // &:hover {
   //   @apply bg-orange-600;
   // }
@@ -71,7 +81,7 @@
   }
 
   span {
-    @apply text-[11px] capitalize font-semibold mt-12 block;
+    @apply text-[11px] capitalize font-semibold mt-12 block text-[#6b6a71];
     @include r-plus {
       @apply text-[14px];
     }
@@ -89,10 +99,10 @@
 }
 
 h3.results-count {
-  @apply text-center text-[21px] font-semibold my-[25px];
+  @apply text-center text-[20px] font-semibold my-[25px];
 }
 .categories {
-  @apply relative;
+  @apply relative h-full overflow-y-auto;
   padding: 0px 25px 50px;
   @include r-plus {
     padding: 0px 60px 100px;
@@ -116,7 +126,7 @@ h3.results-count {
 }
 
 .search-box {
-  @apply bg-white rounded-[8px] px-3 flex items-center gap-2 h-[42px] mb-5;
+  @apply bg-white rounded-[8px] px-3 flex items-center gap-2 h-[42px] mb-5 border-solid border-[0.2px] border-[#d7d7d7];
   box-shadow: 0px 0px 8px rgba(211, 209, 216, 0.3);
   input {
     @apply h-8 text-[#9AA0B4];
