--- a/styles/utilities/generic.scss
+++ b/styles/utilities/generic.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 .btn {
   @apply text-center min-w-[220px] py-3 px-4 text-lg font-normal transition-all duration-300 ease-in-out cursor-pointer mx-auto block w-max rounded-[10px] capitalize;
