--- a/styles/utilities/reset.scss
+++ b/styles/utilities/reset.scss
@@ -120,7 +120,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 table {
@@ -130,22 +130,14 @@ table {
 
 html,
 body {
-  width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-}
-
-/* Set the height and width of all elements to 100% of viewport */
-.app-container {
-  flex-grow: 1;
+  overflow-x: hidden;
 }
 div#__next {
-  box-sizing: border-box;
-  background: #f8f8f8;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+  height: 100%;
+}
+.app-container {
+  height: 100%;
 }
